--- a/mqtt_start-stop.html
+++ b/mqtt_start-stop.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Start/Stop Charging</title>
-  <link rel="stylesheet" href="publisher.css" />
+  <link rel="stylesheet" href="mqtt_start-stop.css" />
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
 
@@ -42,7 +42,7 @@
       <input type="text" id="statSystemStatus" class="status" value="Topic systemStatus:" readonly />
     </li>
   </ul>
-  <script src="publisher.js"></script>
+  <script src="mqtt_start-stop.js"></script>
 </body>
 
 </html>
